--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -11,10 +11,11 @@
     <string name="you_can_eat_dairy_at">אתה יכול לאכול חלבי ב</string>
     <string name="elapsed_since">זמן שחלף</string>
     <string name="app_logo">לוגו האפליקציה</string>
-    <string name="choose_your_minhag">בחר מנהג</string>
     <string name="six_hours">6 שעות</string>
     <string name="five_hours_31_min">5 שעות 31 דקות</string>
     <string name="five_hours_1_min">5 שעות 1 דקות</string>
     <string name="three_hours">3 שעות</string>
     <string name="one_hour">1 שעה</string>
+    <string name="minhag_selection">מנהגים</string>
+    <string name="choose_your_minhag_text_view">בחר מנהג</string>
 </resources>
