Fix Hebrew typo

--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -13,7 +13,7 @@
     <string name="app_logo">לוגו האפליקציה</string>
     <string name="six_hours">6 שעות</string>
     <string name="five_hours_31_min">5 שעות 31 דקות</string>
-    <string name="five_hours_1_min">5 שעות 1 דקות</string>
+    <string name="five_hours_1_min">5 שעות 1 דקה</string>
     <string name="three_hours">3 שעות</string>
     <string name="one_hour">1 שעה</string>
     <string name="minhag_selection">מנהגים</string>
